<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment">

    <TextView
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewYourInput"
        android:id="@+id/textViewYourInput"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextYourHeight"
        android:layout_below="@+id/textViewYourInput"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:layout_alignEnd="@+id/textViewYourInput"
        android:hint="@string/editTextYourHeight" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextYourMass"
        android:layout_below="@+id/editTextYourHeight"
        android:layout_marginTop="15dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/editTextYourMass" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonUpdate"
        android:id="@+id/buttonUpdate"
        android:layout_below="@+id/editTextYourMass"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_alignEnd="@+id/editTextYourMass" />

    <TextView
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewInfo"
        android:id="@+id/textViewInfo"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/silhouette_1"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/textViewIndex"
        android:id="@+id/textViewIndex"
        android:layout_alignTop="@+id/imageView"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/textViewCategory"
        android:id="@+id/textViewCategory"
        android:layout_below="@+id/textViewIndex"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/textViewIndexResult"
        android:id="@+id/textViewIndexResult"
        android:layout_alignBottom="@+id/textViewIndex"
        android:layout_alignStart="@+id/textViewCategoryResult" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/textViewCategoryResult"
        android:id="@+id/textViewCategoryResult"
        android:layout_alignBottom="@+id/textViewCategory"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
